# mcp-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs
client/src/auth/: discovery.rs  flow.rs  mod.rs  provider.rs
client/src/client/: capability_flag.rs  client.rs  client_capabilities.rs  client_error.rs  client_options.rs  client_tasks_capability.rs  elicitation_capability.rs  elicitation_form_capability.rs  elicitation_handler.rs  implementation.rs  initialize_result.rs  json_schema_validator.rs  list_changed_handlers.rs  list_changed_kind.rs  list_changed_options.rs  mod.rs  noop_json_schema_validator.rs  prompt_capabilities.rs  prompt_definition.rs  prompt_list_result.rs  request_stream.rs  resource_capabilities.rs  resource_definition.rs  resource_list_result.rs  response_message.rs  roots_capability.rs  sampling_handler.rs  server_capabilities.rs  task_get_result.rs  task_info.rs  task_list_result.rs  task_result.rs  tests.rs  tool_cache.rs  tool_call_result.rs  tool_capabilities.rs  tool_definition.rs  tool_execution.rs  tool_list_result.rs
client/src/http/: config.rs  error.rs  legacy_sse.rs  mod.rs  reconnect.rs  sse_reader.rs  transport.rs
client/src/stdio/: env.rs  error.rs  mod.rs  params.rs  transport.rs
client/src/stdio/transport/: tests.rs
client/src/websocket/: error.rs  mod.rs  transport.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/auth/: flow.rs  mod.rs
crates/mcp-client/src/client/: client.rs  elicitation_capability.rs  elicitation_form_capability.rs  elicitation_handler.rs  json_schema_validator.rs  list_changed_kind.rs  list_changed_options.rs  prompt_definition.rs  resource_capabilities.rs  response_message.rs  sampling_handler.rs  server_capabilities.rs  task_get_result.rs  task_info.rs  task_list_result.rs  task_result.rs  tests.rs  tool_call_result.rs  tool_definition.rs  tool_list_result.rs
crates/mcp-client/src/http/: config.rs  mod.rs  reconnect.rs  transport.rs
crates/mcp-client/src/stdio/: error.rs  transport.rs
crates/mcp-client/src/websocket/: error.rs  mod.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/auth/: errors.rs  types.rs
crates/mcp-core/src/http/: session.rs
crates/mcp-core/src/protocol/: cancellation_token.rs  capability_checker.rs  notification_handler.rs  protocol.rs  request_handler.rs  request_options.rs  task_store.rs
crates/mcp-core/src/stdio/: mod.rs  transport.rs
crates/mcp-core/src/types/: audio_content.rs  base_metadata.rs  call_tool_result.rs  cancel_task_result.rs  capability_flag.rs  client_capabilities.rs  client_tasks_elicitation_capabilities.rs  client_tasks_request_capabilities.rs  content_block.rs  create_message_result.rs  error_code.rs  get_prompt_result.rs  get_task_request_params.rs  get_task_result.rs  icon.rs  icon_theme.rs  image_content.rs  implementation.rs  initialize_result.rs  jsonrpc_version.rs  list_resource_templates_result.rs  list_resources_result.rs  list_tasks_result.rs  logging_level.rs  logging_message_params.rs  message.rs  mod.rs  notification_message.rs  notification_params.rs  primitive_schema.rs  prompt_capabilities.rs  prompt_message.rs  read_resource_result.rs  related_task_metadata.rs  request_message.rs  resource_link.rs  resource_request_params.rs  resource_updated_notification_params.rs  result_message.rs  role.rs  (+14 more)
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/src/auth/: clients.rs  provider.rs  router.rs
crates/mcp-server/src/auth/handlers/: revoke.rs  (+1 more)
crates/mcp-server/src/http/: axum_handler.rs  broadcast.rs  legacy_sse.rs  session_manager.rs
crates/mcp-server/src/server/: in_memory_task_store.rs  mcp_server.rs  server.rs  server_capability_checker.rs  server_state.rs
crates/mcp-server/src/websocket/: axum_handler.rs
crates/mcp-server/tests/: http_sse.rs  prompts.rs  resources.rs  tasks.rs
crates/mcp-server/tests/support/: mod.rs
examples/http-server/: Cargo.toml
examples/http-server/src/: main.rs
examples/logging-server/: Cargo.toml
examples/logging-server/src/: main.rs
examples/mcp-filesystem-server/: Cargo.toml
examples/mcp-filesystem-server/src/: main.rs
examples/websocket-client/: Cargo.toml
examples/websocket-client/src/: main.rs
examples/websocket-server/: Cargo.toml
examples/websocket-server/src/: main.rs
mcp-impls/github-mcp/: API_MANIFEST.md  Cargo.toml
mcp-impls/github-mcp/crates/mcp-server/: Cargo.toml
mcp-impls/github-mcp/docs/: api-actions.md  api-authentication.md  api-checks.md  api-contents.md  api-endpoints.md  api-git.md  api-issues.md  api-organizations.md  api-pulls.md  api-releases.md  api-repositories.md  api-search.md  api-users.md  api-webhooks.md  rest-api-overview.md
mcp-impls/gitlab-mcp/: .gitignore  CHANGELOGS.md  Cargo.toml  DEV.md  README.md
mcp-impls/gitlab-mcp/crates/api-doc-scraper/: Cargo.toml  README.md
mcp-impls/gitlab-mcp/crates/mcp-client/: Cargo.toml
mcp-impls/gitlab-mcp/crates/mcp-server/: Cargo.toml
mcp-impls/gitlab-mcp/docs/: solution.md
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/auth/: clients.rs  mod.rs  provider.rs  router.rs
server/src/auth/handlers/: authorize.rs  metadata.rs  mod.rs  register.rs  revoke.rs  token.rs
server/src/auth/middleware/: bearer_auth.rs  client_auth.rs  mod.rs
server/src/http/: axum_handler.rs  broadcast.rs  dns_protection.rs  error.rs  handler.rs  legacy_sse.rs  mod.rs  session_manager.rs  sse_writer.rs
server/src/server/: in_memory_task_store.rs  mcp_server.rs  mod.rs  server.rs  server_capability_checker.rs  server_error.rs  server_options.rs  server_state.rs
server/src/server/handlers/: mod.rs  notification_handler_fn.rs  prompt_handler.rs  request_handler_fn.rs  resource_handler.rs  tool_handler.rs
server/src/server/registries/: mod.rs  prompt_registry.rs  resource_registry.rs  tool_registry.rs
server/src/websocket/: axum_handler.rs  mod.rs
server/tests/: capabilities.rs  http_sse.rs  initialize.rs  prompts.rs  resources.rs  tasks.rs  tools.rs
server/tests/support/: mod.rs
(+275 files in other folders)
