[workspace]
resolver = "3"
members = [
    "core",
    "server",
    "client",
    "examples/mcp-filesystem-client",
    "examples/mcp-filesystem-server",
    "examples/http-client",
    "examples/http-server",
    "examples/websocket-server",
    "examples/websocket-client",
    "examples/sse-compat-server",
    "examples/prompts-server",
    "examples/tasks-server",
    "examples/logging-server",
]
