[package]
name = "mcp_client"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }

[features]
default = []
tokio = ["dep:tokio", "dep:tokio-stream"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true
