[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp_core = { path = "../core" }
async-trait = "0.1"
futures = "0.3"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
