[package]
name = "mcp_client"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp_core = { path = "../mcp-core" }
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"

[features]
default = []
tokio = ["dep:tokio", "dep:tokio-stream"]
websocket = ["tokio", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true

[dependencies.tokio-tungstenite]
version = "0.24"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true
