[package]
name = "mcp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
jsonschema = "0.21"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
