[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp_core = { path = "../mcp-core" }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:tower-http", "dep:async-stream", "tokio"]
websocket = ["axum", "tokio"]
tokio = ["dep:tokio", "dep:tokio-stream"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true

[dependencies.axum]
version = "0.7"
features = ["ws"]
optional = true

[dependencies.tower]
version = "0.5"
features = ["util"]
optional = true

[dependencies.tower-http]
version = "0.5"
features = ["cors"]
optional = true
