[package]
name = "mcp-logging-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp_core = { path = "../../crates/mcp-core" }
mcp_server = { path = "../../crates/mcp-server", features = ["axum"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
