[package]
name = "mcp-filesystem-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp_server = { path = "../../crates/mcp-server" }
mcp_core = { path = "../../crates/mcp-core" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
