[package]
name = "mcp-websocket-client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp_client = { path = "../../crates/mcp-client", features = ["websocket"] }
mcp_core = { path = "../../crates/mcp-core" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
