[package]
name = "mcp-websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp_core = { path = "../../crates/mcp-core" }
mcp_server = { path = "../../crates/mcp-server", features = ["websocket"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
