[workspace]
members = ["crates/mcp-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GitHub MCP Contributors"]
license = "MIT"

[workspace.dependencies]
# MCP 框架
mcp_core = { path = "../../../crates/mcp-core" }
mcp_server = { path = "../../../crates/mcp-server" }
mcp_client = { path = "../../../crates/mcp-client" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# 配置
toml = "0.8"
dirs = "5.0"

# 环境变量
dotenv = "0.15"

# 工具
base64 = "0.22"

# 异步
futures = "0.3"
