[workspace]
members = ["crates/mcp-server", "crates/mcp-client", "crates/api-doc-scraper"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GitLab MCP Contributors"]
license = "MIT"

[workspace.dependencies]
# MCP 框架
mcp_core = { path = "../../crates/mcp-core" }
mcp_server = { path = "../../crates/mcp-server" }
mcp_client = { path = "../../crates/mcp-client" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# 输出格式化
tabled = "0.14"
console = "0.15"

# 配置
toml = "0.8"
dirs = "5.0"

# 环境变量
dotenv = "0.15"

# 工具
urlencoding = "2.1"

# 文档抓取
scraper = "0.18"
html2md = "0.2"
governor = "0.6"
indicatif = "0.17"
