[package]
name = "github-mcp"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "github-mcp"
path = "src/main.rs"

[dependencies]
mcp_core = { workspace = true }
mcp_server = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
