[package]
name = "api-doc-scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GitLab API documentation scraper"

[[bin]]
name = "api-doc-scraper"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# HTML 解析和转换
scraper = { workspace = true }
html2md = { workspace = true }

# 速率限制
governor = { workspace = true }

# 进度条
indicatif = { workspace = true }
