[package]
name = "gitlab-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gitlab-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP 框架
mcp_core = { workspace = true }
mcp_server = { workspace = true }

# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true }
url = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# 环境变量
dotenv = { workspace = true }

# 工具
urlencoding = "2.1"

# 配置
toml = { workspace = true }
dirs = { workspace = true }
